--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   display: block;
   width:200px;
   margin: 50px auto;
+  border: none;
 }
 
 p {
@@ -19,4 +20,5 @@ p {
 
 a {
   text-decoration: none;
+  border: none;
 }
